cros: Focus password if user clicks user that is not focused.

Right now the click does nothing, so this improves UX a bit by making it easier
to refocus password.

Also fix error message conditional in login_screen_controller, and simplify
LockContentsViewUnitTest.AuthUserSwapFocusesPassword.

Bug: 810310
Change-Id: Idd547c32083755519f7b3121488cfcbb928a43c2
Reviewed-on: https://chromium-review.googlesource.com/1129852
Reviewed-by: Xiaoyin Hu <xiaoyinh@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573800}
Former-commit-id: 58a1bf4b447082c35058966ecf45abd86bf8f6e7