ash/login/ui/lock_contents_view.cc
@@ -935,13 +935,20 @@ void LockContentsView::SwapActiveAuthBetweenPrimaryAndSecondary(
   if (Shell::Get()->login_screen_controller()->IsAuthenticating())
     return;
 
-  if (is_primary && !primary_big_view_->IsAuthEnabled()) {
-    LayoutAuth(primary_big_view_, opt_secondary_big_view_, true /*animate*/);
-    OnBigUserChanged();
-  } else if (!is_primary && opt_secondary_big_view_ &&
-             !opt_secondary_big_view_->IsAuthEnabled()) {
-    LayoutAuth(opt_secondary_big_view_, primary_big_view_, true /*animate*/);
-    OnBigUserChanged();
+  if (is_primary) {
+    if (!primary_big_view_->IsAuthEnabled()) {
+      LayoutAuth(primary_big_view_, opt_secondary_big_view_, true /*animate*/);
+      OnBigUserChanged();
+    } else {
+      primary_big_view_->RequestFocus();
+    }
+  } else if (!is_primary && opt_secondary_big_view_) {
+    if (!opt_secondary_big_view_->IsAuthEnabled()) {
+      LayoutAuth(opt_secondary_big_view_, primary_big_view_, true /*animate*/);
+      OnBigUserChanged();
+    } else {
+      opt_secondary_big_view_->RequestFocus();
+    }
   }
 }
 
